Update route and swagger modules
